<resources>
    <string name="app_name">Lab3_1</string>

    <string name="activity2">Activity 2</string>
    <string name="activity3">Activity 3</string>
    <string name="activity4">Activity 4</string>
    <string name="exit">Exit</string>

    <string name="button1">Button1</string>
    <string name="button2">Button2</string>
    <string name="button3">Button3</string>
    <string name="button4">Button4</string>
    <string name="button5">Button5</string>
    <string name="button6">Button6</string>
    <string name="button7">Button7</string>

    <string name="left50">Left 50%</string>
    <string name="right50">Right 50%</string>

    <string name="center_left">Center_left</string>
    <string name="center">Center</string>
    <string name="center_right">Center_right</string>

    <string name="bottom">Bottom</string>

    <string name="button">New button</string>
</resources>
