<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context="com.mypackage.lab3_1.MainActivity1">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15">
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.9">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2">

                <Button
                    android:text="@string/activity2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/buttonActivity2"
                    android:onClick="onClick2"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2">

                <Button
                    android:text="@string/activity3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/buttonActivity3"
                    android:onClick="onClick3" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2">

                <Button
                    android:text="@string/activity4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/buttonActivity4"
                    android:onClick="onClick4" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.2">

                <Button
                    android:text="@string/exit"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/buttonExit"
                    android:onClick="onClick5" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.1"/>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="0.15">
    </RelativeLayout>

</LinearLayout>
